--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
@@ -72,6 +72,7 @@
 
 			</section>
 		</main>
-
+		<!-- Importação dos Javascripts AQUI -->
+        <script src="js/principal.js"></script>
 	</body>
 </html>
