--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 		    </form>
 		</section>
 		<!-- Importação dos Javascripts AQUI -->
-        <script src="js/principal.js"></script>
+        <script src="js/calcula-imc.js"></script>
+        <script src="js/form.js"></script>
 	</body>
 </html>
