a6 validacao de formularios

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 		</main>
 		<section class="container">
 		    <h2 id="titulo-form">Adicionar novo paciente</h2>
+		    <ul id="mensagens-erro"></ul>
 		    <form id="form-adiciona">
 		        <div class="">
 		            <label for="nome">Nome:</label>
