A7 removendo os pacientes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente">
+						<tr class="paciente" id="primeiro-paciente">
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -72,6 +72,7 @@
 
 			</section>
 		</main>
+
 		<section class="container">
 		    <h2 id="titulo-form">Adicionar novo paciente</h2>
 		    <ul id="mensagens-erro"></ul>
@@ -99,5 +100,6 @@
 		<!-- Importação dos Javascripts AQUI -->
         <script src="js/calcula-imc.js"></script>
         <script src="js/form.js"></script>
+        <script src="js/remove-paciente.js" ></script>
 	</body>
 </html>
