--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+			    <label for="filtrar-tabela">Filtre:</label>
+			    <input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
+			    <table>
 				<table>
 					<thead>
 						<tr>
@@ -100,6 +103,7 @@
 		<!-- Importação dos Javascripts AQUI -->
         <script src="js/calcula-imc.js"></script>
         <script src="js/form.js"></script>
-        <script src="js/remove-paciente.js" ></script>
+        <script src="js/remove-paciente.js"></script>
+        <script src="js/filtra.js" ></script>
 	</body>
 </html>
