A9 adicionando os pacientes

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 						</tr>
 					</tbody>
 				</table>
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
 
 			</section>
 		</main>
@@ -104,6 +105,7 @@
         <script src="js/calcula-imc.js"></script>
         <script src="js/form.js"></script>
         <script src="js/remove-paciente.js"></script>
-        <script src="js/filtra.js" ></script>
+        <script src="js/filtra.js"></script>
+        <script src="js/buscar-pacientes.js"></script>
 	</body>
 </html>
